# Bench

./: .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml
bench/: cli.py  install.py  solve.py  uninstall.py
