[tool.poetry]
name = "bench"
version = "0.1.0"
description = "PyVRP's benchmarking tool."
authors = [
    "Niels Wouda <nielswouda@gmail.com>",
    "Leon Lan <leon.lanyidong@gmail.com>",
    "Wouter Kool <wouter.kool@ortec.com>",
]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9,<4.0"



[tool.poetry.scripts]
bench = "bench.main:main"


[tool.black]
line-length = 79


[tool.ruff]
ignore-init-module-imports = true
line-length = 79
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TCH"
]


[tool.ruff.isort]
case-sensitive = true
known-first-party = ["bench", "tests"]


[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
