[tool.poetry]
name = "bench"
version = "0.1.0"
description = "PyVRP's benchmarking tool."
authors = [
    "Niels Wouda <nielswouda@gmail.com>",
    "Leon Lan <leon.lanyidong@gmail.com>",
    "Wouter Kool <wouter.kool@ortec.com>",
]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10,<3.14"
numpy = [
    # Numpy 1.26 is the first version of numpy that supports Python 3.12+.
    { version = ">=1.15.2", python = "<3.12" },
    { version = ">=1.26.0", python = ">=3.12" }
]
tqdm = "^4.64.1"
tomli = "^2.0.1"


[tool.poetry.scripts]
bench = "bench.cli:main"


[tool.black]
line-length = 79


[tool.ruff]
ignore-init-module-imports = true
line-length = 79
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TCH"
]


[tool.ruff.isort]
case-sensitive = true
known-first-party = ["bench", "tests"]


[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
